mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-flask
  template:
    metadata:
      labels:
        app: mysql-flask
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: admin
            - name: MYSQL_ROOT_PASSWORD
              value: admin
          image: mysql:latest
          name: mysql-flask
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
               cpu: "100m"
               memory: "512Mi"
          ports:
            - name: mysqlport
              containerPort: 3306
              protocol: TCP
