testapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapi-service
spec:
  type: LoadBalancer
  ports:
  - name: flaskapi
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskapi
