testapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flaskapi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
  - secretName: secret-prod
    hosts:
    - nb-139-162-26-146.singapore.nodebalancer.linode.com
  rules:
  - host: nb-139-162-26-146.singapore.nodebalancer.linode.com
    http:
      paths:
      - path: /
        backend:
          serviceName: flaskapi-service
          servicePort: 80
